--- a/git/index.html
+++ b/git/index.html
@@ -24,7 +24,12 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section>Slide 1</section>
+				<section>
+					<b>Introduction</b>
+
+					Github - dineshs91
+					Twitter - sdinesh91
+				</section>
 				<section>Slide 2</section>
 			</div>
 		</div>
