Add github and twitter brand icons
Add fontawesome dependency

--- a/git/index.html
+++ b/git/index.html
@@ -5,6 +5,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
 		<title>reveal.js</title>
+		
+		<script src="https://use.fontawesome.com/5ff3dc1962.js"></script>
 
 		<link rel="stylesheet" href="css/reveal.css">
 		<link rel="stylesheet" href="css/theme/black.css">
@@ -25,10 +27,10 @@
 		<div class="reveal">
 			<div class="slides">
 				<section>
-					<b>Introduction</b>
+					<h3>Introduction</h3>
 
-					Github - dineshs91
-					Twitter - sdinesh91
+					<i class="fa fa-github" aria-hidden="true"></i> Github - dineshs91<br/>
+					<i class="fa fa-twitter" aria-hidden="true"></i> Twitter - sdinesh91<br/>
 				</section>
 				<section>Slide 2</section>
 			</div>
