Change the title of git talk

--- a/git/index.html
+++ b/git/index.html
@@ -27,7 +27,7 @@
 		<div class="reveal">
 			<div class="slides">
 				<section>
-					<h3>Introduction</h3>
+					<h3>Advanced git</h3>
 
 					<i class="fa fa-github" aria-hidden="true"></i> Github - dineshs91<br/>
 					<i class="fa fa-twitter" aria-hidden="true"></i> Twitter - sdinesh91<br/>
