Add basic styling to talks home page

--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <html>
   <head>My talks</head>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/semantic-ui/2.2.10/components/list.min.css">
   <body>
-    <br/>
-    <a href="git/index.html">Git advanced</a>
+    <div class="ui list">
+      <a class="item" href="git/index.html">Git advanced</a>
+    </div>
   </body>
 </html>
