--- a/git/index.html
+++ b/git/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<title>reveal.js</title>
+		<title>Git advanced</title>
 		
 		<script src="https://use.fontawesome.com/5ff3dc1962.js"></script>
 
