Add basic style to landing page

--- a/index.html
+++ b/index.html
@@ -1,9 +1,22 @@
 <html>
-  <head>My talks</head>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/semantic-ui/2.2.10/components/list.min.css">
+  <head>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/semantic-ui/2.2.10/components/list.min.css">
+    <link rel="stylesheet" href="public/index.css">
+  </head>
   <body>
-    <div class="ui list">
-      <a class="item" href="git/index.html">Git advanced</a>
-    </div>
+  	<div class="container">
+  	  <div class="header">
+  	  	<p>My Talks</p>
+  	  </div>
+  	  <div class="content">
+  	  	<div>
+  	  	  <img class="landing-illustration" src="public/talks.svg">
+  	    </div>
+  	  	<ul class="ui list">
+	      <li><a class="item" href="git/index.html">Git advanced</a></li>
+	    </ul>
+  	  </div>
+  	  
+	</div>
   </body>
 </html>
