--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <head>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/semantic-ui/2.2.10/components/list.min.css">
     <link rel="stylesheet" href="public/index.css">
+    <link rel="shortcut icon" type="image/jpg" href="public/talks-favicon.svg"/>
   </head>
   <body>
   	<div class="container">
@@ -13,10 +14,9 @@
   	  	  <img class="landing-illustration" src="public/talks.svg">
   	    </div>
   	  	<ul class="ui list">
-	      <li><a class="item" href="git/index.html">Git advanced</a></li>
-	    </ul>
+	        <li><a class="item" href="git/index.html">Git advanced</a></li>
+	      </ul>
   	  </div>
-  	  
-	</div>
+	  </div>
   </body>
 </html>
